--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.18.2",
     "pg": "^8.9.0",
     "pg-pool": "^3.5.2",
+    "react-background-slideshow": "^1.0.4",
     "react-router-dom": "^6.8.1",
+    "react-slideshow-image": "^4.2.1",
     "styled-components": "^5.3.6",
     "url": "^0.11.0"
   }
