--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-maps-react": "^2.0.6",
     "pg": "^8.9.0",
     "pg-pool": "^3.5.2",
     "react-background-slideshow": "^1.0.4",
+    "react-geocode": "^0.2.3",
     "react-router-dom": "^6.8.1",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^5.3.6",
