--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "@mui/material": "^5.11.10",
     "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "google-maps-react": "^2.0.6",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "pg-pool": "^3.5.2",
     "react-background-slideshow": "^1.0.4",
