--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-maps-react": "^2.0.6",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
@@ -33,6 +34,7 @@
     "react-background-slideshow": "^1.0.4",
     "react-geocode": "^0.2.3",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.0",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^5.3.6",
     "url": "^0.11.0"
